--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "real-estate-company-e22b5"
-  }
+    "default": "travel-4cac1",
+    "y": "travel-4cac1",
+    "staging": "travel-4cac1"
+  },
+  "targets": {},
+  "etags": {}
 }
